pkg/grammars/prqlgrammar/prql_parser.go
// Code generated from PRQL.g4 by ANTLR 4.13.2. DO NOT EDIT.

package prqlgrammar // PRQL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PRQL struct {
	*antlr.BaseParser
}

var PRQLParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func prqlParserInit() {
	staticData := &PRQLParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "'{'", "'}'", "'('", "')'", "','", "':'", "'.'",
		"'..'", "'-'", "'+'", "'*'", "'/'", "'%'", "'|'", "'::'", "'='", "'!='",
		"'<='", "'>='", "'<'", "'>'", "", "", "", "", "", "' '",
	}
	staticData.SymbolicNames = []string{
		"", "COMMENT", "WS", "KW_FROM", "KW_FILTER", "KW_DERIVE", "KW_SELECT",
		"KW_GROUP", "KW_AGGREGATE", "KW_JOIN", "KW_SORT", "KW_TAKE", "KW_SKIP",
		"KW_WINDOW", "KW_ARRAY_JOIN", "KW_SIDE", "KW_INNER", "KW_LEFT", "KW_RIGHT",
		"KW_FULL", "KW_AS", "KW_FINAL", "LBRACE", "RBRACE", "LPAREN", "RPAREN",
		"COMMA", "COLON", "DOT", "RANGE", "MINUS", "PLUS", "STAR", "SLASH",
		"PERCENT", "PIPE", "CAST_OP", "EQ", "NEQ", "LTE", "GTE", "LT", "GT",
		"FLOAT", "INTEGER", "STRING", "IDENT", "NEWLINE", "FILTER_LINE",
	}
	staticData.RuleNames = []string{
		"query", "clause", "fromClause", "filterClause", "filterBody", "deriveClause",
		"selectClause", "groupClause", "joinClause", "joinSide", "joinCond",
		"joinCondExpr", "joinCondToken", "joinCondInner", "arrayJoinClause",
		"sortClause", "takeClause", "skipClause", "windowClause", "assignmentList",
		"assignment", "selectionList", "selectionItem", "keyList", "keyItem",
		"sortList", "sortItem", "opaqueExpr", "opaqueToken", "opaqueInner",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PRQLInit initializes any static state used to implement PRQL. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPRQL(). You can call this function if you wish to initialize the static state ahead
// of time.
func PRQLInit() {
	staticData := &PRQLParserStaticData
	staticData.once.Do(prqlParserInit)
}

// NewPRQL produces a new parser instance for the optional input antlr.TokenStream.
func NewPRQL(input antlr.TokenStream) *PRQL {
	PRQLInit()
	this := new(PRQL)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PRQLParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PRQL.g4"

	return this
}

// PRQL tokens.
const (
	PRQLEOF           = antlr.TokenEOF
	PRQLCOMMENT       = 1
	PRQLWS            = 2
	PRQLKW_FROM       = 3
	PRQLKW_FILTER     = 4
	PRQLKW_DERIVE     = 5
	PRQLKW_SELECT     = 6
	PRQLKW_GROUP      = 7
	PRQLKW_AGGREGATE  = 8
	PRQLKW_JOIN       = 9
	PRQLKW_SORT       = 10
	PRQLKW_TAKE       = 11
	PRQLKW_SKIP       = 12
	PRQLKW_WINDOW     = 13
	PRQLKW_ARRAY_JOIN = 14
	PRQLKW_SIDE       = 15
	PRQLKW_INNER      = 16
	PRQLKW_LEFT       = 17
	PRQLKW_RIGHT      = 18
	PRQLKW_FULL       = 19
	PRQLKW_AS         = 20
	PRQLKW_FINAL      = 21
	PRQLLBRACE        = 22
	PRQLRBRACE        = 23
	PRQLLPAREN        = 24
	PRQLRPAREN        = 25
	PRQLCOMMA         = 26
	PRQLCOLON         = 27
	PRQLDOT           = 28
	PRQLRANGE         = 29
	PRQLMINUS         = 30
	PRQLPLUS          = 31
	PRQLSTAR          = 32
	PRQLSLASH         = 33
	PRQLPERCENT       = 34
	PRQLPIPE          = 35
	PRQLCAST_OP       = 36
	PRQLEQ            = 37
	PRQLNEQ           = 38
	PRQLLTE           = 39
	PRQLGTE           = 40
	PRQLLT            = 41
	PRQLGT            = 42
	PRQLFLOAT         = 43
	PRQLINTEGER       = 44
	PRQLSTRING        = 45
	PRQLIDENT         = 46
	PRQLNEWLINE       = 47
	PRQLFILTER_LINE   = 48
)

// PRQL rules.
const (
	PRQLRULE_query           = 0
	PRQLRULE_clause          = 1
	PRQLRULE_fromClause      = 2
	PRQLRULE_filterClause    = 3
	PRQLRULE_filterBody      = 4
	PRQLRULE_deriveClause    = 5
	PRQLRULE_selectClause    = 6
	PRQLRULE_groupClause     = 7
	PRQLRULE_joinClause      = 8
	PRQLRULE_joinSide        = 9
	PRQLRULE_joinCond        = 10
	PRQLRULE_joinCondExpr    = 11
	PRQLRULE_joinCondToken   = 12
	PRQLRULE_joinCondInner   = 13
	PRQLRULE_arrayJoinClause = 14
	PRQLRULE_sortClause      = 15
	PRQLRULE_takeClause      = 16
	PRQLRULE_skipClause      = 17
	PRQLRULE_windowClause    = 18
	PRQLRULE_assignmentList  = 19
	PRQLRULE_assignment      = 20
	PRQLRULE_selectionList   = 21
	PRQLRULE_selectionItem   = 22
	PRQLRULE_keyList         = 23
	PRQLRULE_keyItem         = 24
	PRQLRULE_sortList        = 25
	PRQLRULE_sortItem        = 26
	PRQLRULE_opaqueExpr      = 27
	PRQLRULE_opaqueToken     = 28
	PRQLRULE_opaqueInner     = 29
)

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllClause() []IClauseContext
	Clause(i int) IClauseContext
	EOF() antlr.TerminalNode

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_query
	return p
}

func InitEmptyQueryContext(p *QueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_query
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PRQLRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) AllClause() []IClauseContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IClauseContext); ok {
			len++
		}
	}

	tst := make([]IClauseContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IClauseContext); ok {
			tst[i] = t.(IClauseContext)
			i++
		}
	}

	return tst
}

func (s *QueryContext) Clause(i int) IClauseContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClauseContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClauseContext)
}

func (s *QueryContext) EOF() antlr.TerminalNode {
	return s.GetToken(PRQLEOF, 0)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (s *QueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PRQLVisitor:
		return t.VisitQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PRQL) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PRQLRULE_query)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&32504) != 0) {
		{
			p.SetState(60)
			p.Clause()
		}

		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(66)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(65)
			p.Match(PRQLEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClauseContext is an interface to support dynamic dispatch.
type IClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FromClause() IFromClauseContext
	FilterClause() IFilterClauseContext
	DeriveClause() IDeriveClauseContext
	SelectClause() ISelectClauseContext
	GroupClause() IGroupClauseContext
	JoinClause() IJoinClauseContext
	ArrayJoinClause() IArrayJoinClauseContext
	SortClause() ISortClauseContext
	TakeClause() ITakeClauseContext
	SkipClause() ISkipClauseContext
	WindowClause() IWindowClauseContext

	// IsClauseContext differentiates from other interfaces.
	IsClauseContext()
}

type ClauseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClauseContext() *ClauseContext {
	var p = new(ClauseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_clause
	return p
}

func InitEmptyClauseContext(p *ClauseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_clause
}

func (*ClauseContext) IsClauseContext() {}

func NewClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClauseContext {
	var p = new(ClauseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PRQLRULE_clause

	return p
}

func (s *ClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *ClauseContext) FromClause() IFromClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFromClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFromClauseContext)
}

func (s *ClauseContext) FilterClause() IFilterClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterClauseContext)
}

func (s *ClauseContext) DeriveClause() IDeriveClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeriveClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeriveClauseContext)
}

func (s *ClauseContext) SelectClause() ISelectClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectClauseContext)
}

func (s *ClauseContext) GroupClause() IGroupClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupClauseContext)
}

func (s *ClauseContext) JoinClause() IJoinClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IJoinClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IJoinClauseContext)
}

func (s *ClauseContext) ArrayJoinClause() IArrayJoinClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArrayJoinClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArrayJoinClauseContext)
}

func (s *ClauseContext) SortClause() ISortClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISortClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISortClauseContext)
}

func (s *ClauseContext) TakeClause() ITakeClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITakeClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITakeClauseContext)
}

func (s *ClauseContext) SkipClause() ISkipClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISkipClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISkipClauseContext)
}

func (s *ClauseContext) WindowClause() IWindowClauseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWindowClauseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWindowClauseContext)
}

func (s *ClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.EnterClause(s)
	}
}

func (s *ClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.ExitClause(s)
	}
}

func (s *ClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PRQLVisitor:
		return t.VisitClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PRQL) Clause() (localctx IClauseContext) {
	localctx = NewClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PRQLRULE_clause)
	p.SetState(79)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PRQLKW_FROM:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(68)
			p.FromClause()
		}

	case PRQLKW_FILTER:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(69)
			p.FilterClause()
		}

	case PRQLKW_DERIVE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(70)
			p.DeriveClause()
		}

	case PRQLKW_SELECT:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(71)
			p.SelectClause()
		}

	case PRQLKW_GROUP:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(72)
			p.GroupClause()
		}

	case PRQLKW_JOIN:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(73)
			p.JoinClause()
		}

	case PRQLKW_ARRAY_JOIN:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(74)
			p.ArrayJoinClause()
		}

	case PRQLKW_SORT:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(75)
			p.SortClause()
		}

	case PRQLKW_TAKE:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(76)
			p.TakeClause()
		}

	case PRQLKW_SKIP:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(77)
			p.SkipClause()
		}

	case PRQLKW_WINDOW:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(78)
			p.WindowClause()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFromClauseContext is an interface to support dynamic dispatch.
type IFromClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	KW_FROM() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	KW_FINAL() antlr.TerminalNode

	// IsFromClauseContext differentiates from other interfaces.
	IsFromClauseContext()
}

type FromClauseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFromClauseContext() *FromClauseContext {
	var p = new(FromClauseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_fromClause
	return p
}

func InitEmptyFromClauseContext(p *FromClauseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_fromClause
}

func (*FromClauseContext) IsFromClauseContext() {}

func NewFromClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FromClauseContext {
	var p = new(FromClauseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PRQLRULE_fromClause

	return p
}

func (s *FromClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *FromClauseContext) KW_FROM() antlr.TerminalNode {
	return s.GetToken(PRQLKW_FROM, 0)
}

func (s *FromClauseContext) IDENT() antlr.TerminalNode {
	return s.GetToken(PRQLIDENT, 0)
}

func (s *FromClauseContext) KW_FINAL() antlr.TerminalNode {
	return s.GetToken(PRQLKW_FINAL, 0)
}

func (s *FromClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FromClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FromClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.EnterFromClause(s)
	}
}

func (s *FromClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.ExitFromClause(s)
	}
}

func (s *FromClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PRQLVisitor:
		return t.VisitFromClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PRQL) FromClause() (localctx IFromClauseContext) {
	localctx = NewFromClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PRQLRULE_fromClause)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(81)
		p.Match(PRQLKW_FROM)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(82)
		p.Match(PRQLIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == PRQLKW_FINAL {
		{
			p.SetState(83)
			p.Match(PRQLKW_FINAL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFilterClauseContext is an interface to support dynamic dispatch.
type IFilterClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	KW_FILTER() antlr.TerminalNode
	FilterBody() IFilterBodyContext

	// IsFilterClauseContext differentiates from other interfaces.
	IsFilterClauseContext()
}

type FilterClauseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilterClauseContext() *FilterClauseContext {
	var p = new(FilterClauseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_filterClause
	return p
}

func InitEmptyFilterClauseContext(p *FilterClauseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PRQLRULE_filterClause
}

func (*FilterClauseContext) IsFilterClauseContext() {}

func NewFilterClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilterClauseContext {
	var p = new(FilterClauseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PRQLRULE_filterClause

	return p
}

func (s *FilterClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *FilterClauseContext) KW_FILTER() antlr.TerminalNode {
	return s.GetToken(PRQLKW_FILTER, 0)
}

func (s *FilterClauseContext) FilterBody() IFilterBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterBodyContext)
}

func (s *FilterClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilterClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.EnterFilterClause(s)
	}
}

func (s *FilterClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PRQLListener); ok {
		listenerT.ExitFilterClause(s)
	}
}
